--- a/Quiz.html
+++ b/Quiz.html
@@ -18,6 +18,8 @@
             
             <div id="intro">
                 <img id = "logo" src="Assets/computer-retro-02-80s-3d-model-low-poly-obj-fbx-ma-mb.jpg">
+                <h2>FUNdamenetal Javascript Quiz</h2>
+                <h3 class="lead"> Are you the next Steve Gates?</h3>
                 
             </div>
 
