added all Div w/Ids

--- a/Quiz.html
+++ b/Quiz.html
@@ -20,8 +20,20 @@
                 <img id = "logo" src="Assets/computer-retro-02-80s-3d-model-low-poly-obj-fbx-ma-mb.jpg">
                 <h2>FUNdamenetal Javascript Quiz</h2>
                 <h3 class="lead"> Are you the next Steve Gates?</h3>
-                
+                <button class="play" type="submit">START</button>    
             </div>
+
+            <div id="game">
+                <div id="score"></div><br>
+                <div id="timer"></div>
+                <div id="question"></div><br>
+                <div id="answers"></div>
+            </div>
+            <div id="resultbox">
+                <div id="result"></div>
+                <div id="resultText"></div>
+            </div>
+
 
         </div>
     </div>
