--- a/Quiz.html
+++ b/Quiz.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Graduate" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Assets/Quiz.css">
-    
+
     <title>Quiz Time</title>
 </head>
+
 <body>
     <!--jquery Link-->
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
@@ -15,12 +19,12 @@
     <div class="container">
 
         <div class="jumbotron">
-            
+
             <div id="intro">
-                <img id = "logo" src="Assets/computer-retro-02-80s-3d-model-low-poly-obj-fbx-ma-mb.jpg">
+                <img id="logo" src="Assets/computer-retro-02-80s-3d-model-low-poly-obj-fbx-ma-mb.jpg">
                 <h2>FUNdamenetal Javascript Quiz</h2>
                 <h3 class="lead"> Are you the next Steve Gates?</h3>
-                <button class="play" type="submit">START</button>    
+                <button class="play" type="submit">START</button>
             </div>
 
             <div id="game">
@@ -38,4 +42,5 @@
         </div>
     </div>
 </body>
+
 </html>
